deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
  name: ${HOST}-ingress
spec:
  rules:
    - host: ${HOST}.magnum.kz
      http:
        paths:
          - backend:
              service:
                name: dev-fastman-service
                port:
                  number: 8086
            path: /
            pathType: Prefix
